# lumatone-isomorphic

./: .ghci  .gitignore  README.md  TODO.org  lumamap.hs  lumatone-isomorphic.cabal
app/: Colors.hs  Data.hs  Layout.hs  Lib.hs  Main.hs  Test.hs  Touch.hs  Types.hs  Util.hs
data/: LumaTouchConfig_choices.txt  README.md  tail.onOffVelo_exp_4_1.txt  tail.txt
output/: .exist
sample-output/: 12edo.2right.1downright.ltn  12edo.4right.5downright.+60notes.ltn  12edo.4right.5downright.5-black.ltn  12edo.5right.6downright.5-black.ltn  19edo.6right.7downright.4-black.ltn  24edo.4right.5downright.ltn  24edo.5right.4downright.ltn  27edo.4right.3downright.2-downright.ltn  27edo.4right.3downright.2-vert.ltn  27edo.4right.7downright.2-downright.ltn  27edo.4right.7downright.black-2-horiz-2-dr.ltn  29edo.5right.2downright.ltn  29edo.5right.2downright.rainbow-black-stripe.ltn  31edo-5r-3dl.ltn  31edo.5right.3downright.2-vert-2-horiz.ltn  31edo.5right.3downright.2-vert.ltn  31edo.5right.3downright.ltn  31edo.5right.3downright.rainbow.2-black-adjacent.ltn  31edo.5right.3downright.smooth.ltn  34edo.3right.11downright.2-horiz-black.ltn  34edo.3right.11downright.black-2-horiz-2-vert.ltn  34edo.3right.11downright.color-7.black-2-horiz-2-vert.ltn  34edo.3right.11downright.rainbow.ltn  34edo.3right.8downright.ltn  34edo.4right.3downright.ltn  34edo.4right.5downright.rainbow.ltn  34edo.4right.7downright.ltn  34edo.5right.-1downright.ltn  34edo.7right.3downright.+1notes.rainbow.ltn  34edo.7right.3downright.2-horiz-black.ltn  34edo.7right.3downright.black-2-horiz-2-vert.ltn  41edo-6r--1dl.ltn  (+74 more)
(+13 files in other folders)
