cabal-version:      2.4
name:               lumatone-isomorphic
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jeffrey Benjamin Brown
maintainer:         jeffbrown.the@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable lumatone-isomorphic
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Colors,
      Colors.Simple,
      Colors.Edo31,
      Colors.Edo34,
      Colors.Edo46,
      Colors.Edo58,
      Colors.Edo60,
      Layout,
      Lib,
      Test,
      Util,
      Types

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base,
      containers,
      extra,
      HUnit
    hs-source-dirs:   app
    default-language: Haskell2010
